--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -146,3 +146,77 @@ input[type=url]:focus {
   clear: both;
 }
 
+.red {
+  color: red;
+  font-weight:100;
+  padding-left: 5px;
+}
+
+.link-panel {
+  width: 100%;
+  background: #FAFAFA;
+  margin: 0px;
+  height: 88px;
+}
+
+.link-panel:hover {
+  width: 100%;
+  background: #F1F1F1;
+}
+
+.title-box {
+  width: 80%;
+  float: left;
+}
+
+.view-counter-box {
+  width: 20%;
+  float: right;
+}
+
+.counter-num {
+  font-size: 25px;
+  margin-bottom: 0px;
+  margin-top: 8px;
+}
+
+.title-text {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.title-text:hover {
+  cursor:pointer;
+}
+
+.views-text {
+  margin-top: 0px;
+}
+
+.tab-button {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.btn-default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
